--- a/public/scss/layout/_common.scss
+++ b/public/scss/layout/_common.scss
@@ -112,7 +112,7 @@ header{
       .description-holder{
         .description-title{
           display:block;
-          margin:0 0 10px;
+          margin: 15px 0px ;
         }
       }
 
@@ -134,9 +134,8 @@ header{
   width: 100%;
 }
 .name-input{
-  color: #4CAF50;
+  color: black;
   border-bottom: 1px solid #c5c5c5;
-  margin: 0;
   padding: 10px;
   margin: 0 10px 0 0;
   width: 100%;
